--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
     <title>Document</title>
 </head>
 <body>
-    
+      <header>
+        <nav>
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">Service</a></li>
+                <li><a href="">Contact</a></li>
+            </ul>
+        </nav>
     <script src="./javascript/script.js"></script>
 </body>
 </html>
