feat(main):add main in index.html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <main>
+        <h1>Olá Mundo!</h1>
+    </main>
     <script src="./javascript/script.js"></script>
 </body>
 </html>
