--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
+    <main>
+        <h1>Olá Mundo!</h1>
       <header>
         <nav>
             <ul>
@@ -16,6 +18,7 @@
                 <li><a href="">Contact</a></li>
             </ul>
         </nav>
+    </main>
     <script src="./javascript/script.js"></script>
 </body>
 </html>
