--- a/index.html
+++ b/index.html
@@ -1,24 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
     <title>Document</title>
 </head>
+
 <body>
-        <nav>
-            <ul>
-                <li><a href="">Home</a></li>
-                <li><a href="">About</a></li>
-                <li><a href="">Service</a></li>
-                <li><a href="">Contact</a></li>
-            </ul>
-        </nav>
+    <nav>
+        <ul>
+            <li><a href="">Home</a></li>
+            <li><a href="">About</a></li>
+            <li><a href="">Service</a></li>
+            <li><a href="">Contact</a></li>
+        </ul>
+    </nav>
+    </header>
     <main>
         <h1>Olá Mundo!</h1>
-      <header>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim corporis blanditiis soluta iure cumque labore
+            rem necessitatibus sequi, cum corrupti quo consectetur et non exercitationem architecto dicta doloribus
+            eveniet sed.</p>
+
     </main>
     <script src="./javascript/script.js"></script>
 </body>
+
 </html>
